k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-postgres
  labels:
    name: fastapi-postgres
    purpose: application-deployment
